--- a/about.html
+++ b/about.html
@@ -30,55 +30,53 @@
     <h1>About OSU Day Traders</h1>
     <p>
       We’re a student-led community focused on building consistent, disciplined trading processes.
-      Members get hands-on practice, structured playbooks, and accountability partners. Whether you’re
-      brand new or experienced, you’ll find people who take the craft seriously.
+      Members get hands-on practice, structured playbooks, and accountability partners.
     </p>
 
     <h2>What We Do</h2>
     <ul class="checklist">
-      <li>Daily watchlists, levels, and post-market reviews</li>
-      <li>Risk management and journaling systems</li>
-      <li>Guest speakers, workshops, and challenge weeks</li>
-      <li>Collaborative strategy research</li>
+      <li>Daily watchlists, levels, and reviews</li>
+      <li>Risk management and journaling</li>
+      <li>Guest speakers and workshops</li>
+      <li>Collaborative research</li>
     </ul>
 
     <h2>Leadership</h2>
 
-    <!-- Featured row: President + Vice President (wide cards) -->
+    <!-- Featured row -->
     <div class="leaders-featured">
       <div class="leader card leader--wide">
-        <img src="assets/images/president.jpg" alt="President" class="leader-photo" />
+        <img src="assets/images/president.jpg" alt="President — Steven Wang" class="leader-photo" />
         <div class="leader-body">
-          <h3>President</h3>
+          <h3>President — Steven Wang</h3>
           <p>Leads strategy, partnerships, and weekly programming.</p>
         </div>
       </div>
 
       <div class="leader card leader--wide">
-        <img src="assets/images/blank.png" alt="Vice President" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Vice President — Maxim Towers" class="leader-photo" />
         <div class="leader-body">
-          <h3>Vice President</h3>
-          <p>Coordinates events and supports the president in strategic decisions.</p>
+          <h3>Vice President — Maxim Towers</h3>
+          <p>Coordinates events and supports the president in decisions.</p>
         </div>
       </div>
     </div>
 
-    <!-- Everyone else: 3 cards per row -->
+    <!-- Other leaders -->
     <div class="leaders-others">
-      <!-- PR first, shortened and with name -->
       <div class="leader card">
         <img src="assets/images/public-relations.jpg" alt="PR — Jenny Zhu" class="leader-photo" />
         <div class="leader-body">
           <h3>PR — Jenny Zhu</h3>
-          <p>Builds the club’s presence on campus and online: social media, event promotion, and partnerships.</p>
+          <p>Manages social media, promotes events, and builds partnerships.</p>
         </div>
       </div>
 
       <div class="leader card">
-        <img src="assets/images/secretary.jpg" alt="Secretary" class="leader-photo" />
+        <img src="assets/images/secretary.jpg" alt="Secretary — Vivian Wang" class="leader-photo" />
         <div class="leader-body">
-          <h3>Secretary</h3>
-          <p>Manages communications, notes, schedules, and organizational records.</p>
+          <h3>Secretary — Vivian Wang</h3>
+          <p>Handles communications, notes, schedules, and records.</p>
         </div>
       </div>
 
@@ -86,7 +84,7 @@
         <img src="assets/images/blank.png" alt="Treasurer" class="leader-photo" />
         <div class="leader-body">
           <h3>Treasurer</h3>
-          <p>Handles budgeting, reimbursements, fundraising, and financial transparency for the club.</p>
+          <p>Manages budgeting, reimbursements, and fundraising.</p>
         </div>
       </div>
 
@@ -94,7 +92,7 @@
         <img src="assets/images/blank.png" alt="Education Lead" class="leader-photo" />
         <div class="leader-body">
           <h3>Education Lead</h3>
-          <p>Designs workshops and bootcamps on risk, journaling, setups, and platform basics.</p>
+          <p>Designs workshops and study tracks on risk, journaling, and setups.</p>
         </div>
       </div>
 
@@ -102,7 +100,7 @@
         <img src="assets/images/blank.png" alt="Events Coordinator" class="leader-photo" />
         <div class="leader-body">
           <h3>Events Coordinator</h3>
-          <p>Runs speakers, collaborations, and challenge weeks. Owns logistics and day-of execution.</p>
+          <p>Plans speakers, collabs, and challenge weeks.</p>
         </div>
       </div>
 
@@ -110,7 +108,7 @@
         <img src="assets/images/blank.png" alt="Risk & Analytics" class="leader-photo" />
         <div class="leader-body">
           <h3>Risk &amp; Analytics</h3>
-          <p>Builds dashboards and review templates to enforce process and sharpen edge.</p>
+          <p>Builds dashboards and trade reviews to enforce process.</p>
         </div>
       </div>
     </div>
@@ -128,7 +126,6 @@
 
   <script src="js/main.js"></script>
   <script>
-    // fallback year if main.js doesn't set it
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
