--- a/about.html
+++ b/about.html
@@ -89,9 +89,9 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png" alt="Education Lead" class="leader-photo" />
+        <img src="assets/images/blank.png" alt="Trading Committee Lead — Brian Liao" class="leader-photo" />
         <div class="leader-body">
-          <h3>Education Lead</h3>
+          <h3>Trading Committee Lead — Brian Liao</h3>
           <p>Designs workshops and study tracks on risk, journaling, and setups.</p>
         </div>
       </div>
