--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <a class="brand" href="index.html">
-      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo" />
+      <img src="assets/images/osu-daytraders-logo.png?v=20251013" alt="OSU Day Traders Logo" />
       <span>OSU Day Traders</span>
     </a>
 
@@ -46,7 +46,7 @@
     <!-- Featured row -->
     <div class="leaders-featured">
       <div class="leader card leader--wide">
-        <img src="assets/images/president.jpg" alt="President — Steven Wang" class="leader-photo" />
+        <img src="assets/images/president.jpg?v=20251013" alt="President — Steven Wang" class="leader-photo" />
         <div class="leader-body">
           <h3>President — Steven Wang</h3>
           <p>Leads strategy, partnerships, and weekly programming.</p>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="leader card leader--wide">
-        <img src="assets/images/blank.png" alt="Vice President — Maxim Towers" class="leader-photo" />
+        <img src="assets/images/vice-president.jpg?v=20251013" alt="Vice President — Maxim Towers" class="leader-photo" />
         <div class="leader-body">
           <h3>Vice President — Maxim Towers</h3>
           <p>Coordinates events and supports the president in decisions.</p>
@@ -65,7 +65,7 @@
     <!-- Other leaders -->
     <div class="leaders-others">
       <div class="leader card">
-        <img src="assets/images/public-relations.jpg" alt="PR — Jenny Zhu" class="leader-photo" />
+        <img src="assets/images/public-relations.jpg?v=20251013" alt="PR — Jenny Zhu" class="leader-photo" />
         <div class="leader-body">
           <h3>PR — Jenny Zhu</h3>
           <p>Manages social media, promotes events, and builds partnerships.</p>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/secretary.jpg" alt="Secretary — Vivian Wang" class="leader-photo" />
+        <img src="assets/images/secretary.jpg?v=20251013" alt="Secretary — Vivian Wang" class="leader-photo" />
         <div class="leader-body">
           <h3>Secretary — Vivian Wang</h3>
           <p>Handles communications, notes, schedules, and records.</p>
@@ -81,7 +81,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png" alt="Treasurer" class="leader-photo" />
+        <img src="assets/images/blank.png?v=20251013" alt="Treasurer" class="leader-photo" />
         <div class="leader-body">
           <h3>Treasurer</h3>
           <p>Manages budgeting, reimbursements, and fundraising.</p>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png" alt="Trading Committee Lead — Brian Liao" class="leader-photo" />
+        <img src="assets/images/trading-committee.jpg?v=20251013" alt="Trading Committee Lead — Brian Liao" class="leader-photo" />
         <div class="leader-body">
           <h3>Trading Committee Lead — Brian Liao</h3>
           <p>Designs workshops and study tracks on risk, journaling, and setups.</p>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png" alt="Events Coordinator" class="leader-photo" />
+        <img src="assets/images/blank.png?v=20251013" alt="Events Coordinator" class="leader-photo" />
         <div class="leader-body">
           <h3>Events Coordinator</h3>
           <p>Plans speakers, collabs, and challenge weeks.</p>
@@ -105,7 +105,7 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png" alt="Risk & Analytics" class="leader-photo" />
+        <img src="assets/images/blank.png?v=20251013" alt="Risk & Analytics" class="leader-photo" />
         <div class="leader-body">
           <h3>Risk &amp; Analytics</h3>
           <p>Builds dashboards and trade reviews to enforce process.</p>
@@ -124,7 +124,7 @@
     <p>&copy; <span id="year"></span> OSU Day Traders • Student Organization</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js?v=20251013"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
