--- a/applications.html
+++ b/applications.html
@@ -6,108 +6,55 @@
   <title>Applications • OSU Day Traders</title>
   <link rel="stylesheet" href="css/style.css"/>
 
-  <!-- Page-local polish (doesn't touch your global CSS) -->
+  <!-- Page-local polish -->
   <style>
     :root{
-      --scarlet: #c4122f;
-      --ink: #121212;
-      --muted: #5b5b5b;
-      --panel: #ffffff;
-      --surface: #f6f6f6;
+      --scarlet:#c4122f; --ink:#121212; --muted:#5b5b5b; --panel:#fff; --surface:#f6f6f6;
     }
+    body{background:var(--surface)}
+    .page-wrap{max-width:1100px;margin:0 auto;padding:1.5rem 1rem 3rem}
+    .lede{max-width:860px;margin:.25rem auto 1.25rem}
+    .lede p{color:#444;margin:.5rem 0 0}
 
-    body { background: var(--surface); }
-
-    .page-wrap{
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 1.5rem 1rem 3rem;
-    }
-
-    .lede{max-width: 860px; margin: .25rem auto 1.25rem;}
-    .lede p{color:#444; margin:.5rem 0 0}
-
-    /* Big aesthetic panels */
     .app-panel{
-      background: var(--panel);
-      border: none;                /* no black outline */
-      border-radius: 20px;
-      box-shadow: 0 18px 40px rgba(0,0,0,.12);
-      padding: clamp(1.25rem, 3vw, 2rem);
-      margin: 1.25rem 0 1.75rem;
-      transition: transform .18s ease, box-shadow .18s ease;
+      background:var(--panel); border:none; border-radius:20px;
+      box-shadow:0 18px 40px rgba(0,0,0,.12);
+      padding:clamp(1.25rem,3vw,2rem); margin:1.25rem 0 1.75rem;
+      transition:transform .18s ease, box-shadow .18s ease;
     }
-    .app-panel:hover{
-      transform: translateY(-2px);
-      box-shadow: 0 26px 56px rgba(0,0,0,.16);
-    }
+    .app-panel:hover{ transform:translateY(-2px); box-shadow:0 26px 56px rgba(0,0,0,.16) }
 
-    /* Panel header */
-    .panel-head{
-      display:flex; align-items:baseline; gap: .75rem; flex-wrap: wrap;
-      border-bottom: 1px solid #eee; padding-bottom: .75rem; margin-bottom: 1rem;
-    }
-    .panel-eyebrow{
-      display:inline-block; font-weight:800; letter-spacing:.02em;
-      font-size:.88rem; color:#fff; background:var(--scarlet);
-      padding:.35rem .7rem; border-radius:999px;
-    }
-    .panel-title{
-      margin:0; font-weight:900; line-height:1.15;
-      font-size: clamp(1.35rem, 2.2vw, 1.75rem);
-      color: var(--ink);
-    }
+    .panel-head{display:flex;align-items:baseline;gap:.75rem;flex-wrap:wrap;
+      border-bottom:1px solid #eee;padding-bottom:.75rem;margin-bottom:1rem}
+    .panel-eyebrow{display:inline-block;font-weight:800;letter-spacing:.02em;
+      font-size:.88rem;color:#fff;background:var(--scarlet);padding:.35rem .7rem;border-radius:999px}
+    .panel-title{margin:0;font-weight:900;line-height:1.15;font-size:clamp(1.35rem,2.2vw,1.75rem);color:var(--ink)}
 
-    /* Body content columns */
-    .panel-body{
-      display:grid; gap: 1.25rem;
-      grid-template-columns: 1.2fr .9fr;
-    }
-    @media (max-width: 900px){
-      .panel-body{ grid-template-columns: 1fr; }
-    }
+    .panel-body{display:grid;gap:1.25rem;grid-template-columns:1.2fr .9fr}
+    @media (max-width:900px){.panel-body{grid-template-columns:1fr}}
+    .panel-body p{margin:.5rem 0 0;color:var(--muted);font-size:1rem;line-height:1.55}
 
-    .panel-body p{
-      margin:.5rem 0 0; color:var(--muted);
-      font-size: 1rem; line-height: 1.55;
-    }
+    .desc{display:grid;gap:.5rem}
+    .desc h3{margin:0 0 .25rem 0;font-size:1.05rem}
+    .checklist{margin:.25rem 0 0 0;padding:0 0 0 1.15rem;color:#444;display:grid;gap:.25rem;font-size:.98rem;line-height:1.45}
 
-    .desc{
-      display:grid; gap:.5rem;
-    }
-    .desc h3{
-      margin:0 0 .25rem 0; font-size:1.05rem;
-    }
-    .checklist{
-      margin:.25rem 0 0 0; padding:0 0 0 1.15rem; color:#444;
-      display:grid; gap:.25rem;
-      font-size:.98rem; line-height:1.45;
-    }
-
-    /* CTA column */
-    .cta{
-      background: linear-gradient(180deg, #fff, #fafafa);
-      border: 1px solid #eee;
-      border-radius: 16px;
-      padding: 1rem;
-      display: grid; gap: .6rem; align-content: start;
-    }
-    .cta p{ margin:0; color:#555; font-size:.95rem; }
-    .btn{
-      display:inline-block; text-decoration:none; font-weight:900;
-      padding:.85rem 1.05rem; border-radius:999px; border:none; cursor:pointer;
-    }
-    .btn-primary{
-      background:var(--scarlet); color:#fff;
-      box-shadow: 0 8px 18px rgba(196,18,47,.25);
-    }
-    .btn-primary:hover{ filter:brightness(.96); }
-
-    /* Small meta rows */
-    .meta{
-      display:grid; gap:.25rem; font-size:.9rem; color:#666;
-    }
+    .cta{background:linear-gradient(180deg,#fff,#fafafa);border:1px solid #eee;border-radius:16px;padding:1rem;display:grid;gap:.6rem;align-content:start}
+    .cta p{margin:0;color:#555;font-size:.95rem}
+    .btn{display:inline-block;text-decoration:none;font-weight:900;padding:.85rem 1.05rem;border-radius:999px;border:none;cursor:pointer}
+    .btn-primary{background:var(--scarlet);color:#fff;box-shadow:0 8px 18px rgba(196,18,47,.25)}
+    .btn-primary:hover{filter:brightness(.96)}
+    .meta{display:grid;gap:.25rem;font-size:.9rem;color:#666}
     .meta strong{color:#333}
+
+    /* Fullscreen form overlay */
+    .form-overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;z-index:9999}
+    .form-sheet{position:absolute;inset:4% 3%;background:#fff;border-radius:18px;overflow:hidden;
+      box-shadow:0 30px 80px rgba(0,0,0,.4);display:flex;flex-direction:column}
+    .form-bar{display:flex;align-items:center;justify-content:space-between;padding:.85rem 1rem;border-bottom:1px solid #eee}
+    .form-bar h3{margin:0;font-size:1rem;font-weight:800}
+    .form-close{border:none;background:#eee;border-radius:999px;padding:.45rem .7rem;font-weight:800;cursor:pointer}
+    .form-frame{border:0;width:100%;height:100%}
+    @media (max-width:640px){.form-sheet{inset:2% 2%}}
   </style>
 </head>
 <body>
@@ -132,7 +79,7 @@
   <main class="page-wrap">
     <div class="lede">
       <h1>Applications</h1>
-      <p>Pick a role and hit <strong>Apply</strong>. Each panel explains the scope, expectations, and what to include. You’ll get a pre-filled email draft — attach any files before sending.</p>
+      <p>Pick a role and hit <strong>Apply</strong>. Each panel explains the scope, expectations, and what to include. Your submission is logged in Google Sheets and emailed to us.</p>
     </div>
 
     <!-- Treasurer -->
@@ -141,7 +88,6 @@
         <span class="panel-eyebrow">Leadership</span>
         <h2 class="panel-title">Treasurer Application</h2>
       </div>
-
       <div class="panel-body">
         <div class="desc">
           <h3>What you’ll own</h3>
@@ -151,24 +97,20 @@
             <li>Tracking dues, fundraising, and sponsorships.</li>
             <li>Clear, periodic financial reporting.</li>
           </ul>
-
           <h3>What to include</h3>
           <ul class="checklist">
             <li>Relevant experience (treasurer roles, budgets, audits).</li>
             <li>Tools you’re comfortable with (Sheets/Excel, QuickBooks, etc.).</li>
-            <li>Availability (weekly hours) and any links (resume, portfolio).</li>
+            <li>Availability and any links (resume, portfolio).</li>
           </ul>
         </div>
-
         <aside class="cta">
           <div class="meta">
             <div><strong>Commitment:</strong> ~3–6 hrs/week</div>
             <div><strong>Works with:</strong> President, Events, Sponsors</div>
           </div>
           <p>We’re looking for someone organized, detail-oriented, and friendly with spreadsheets.</p>
-          <a class="btn btn-primary"
-             href="mailto:apply@daytradersosu.com?subject=Treasurer%20Application&body=Name:%0AEmail:%0AMajor/Year:%0AExperience:%0ATools:%0ALinks:%0AAvailability:%0A"
-             >Apply</a>
+          <button class="btn btn-primary" data-open-form="treasurer">Apply</button>
         </aside>
       </div>
     </section>
@@ -179,7 +121,6 @@
         <span class="panel-eyebrow">Programming</span>
         <h2 class="panel-title">Guest Speaker Application</h2>
       </div>
-
       <div class="panel-body">
         <div class="desc">
           <h3>Ideal speakers</h3>
@@ -188,24 +129,20 @@
             <li>Professionals with market, risk, or analytics insights.</li>
             <li>Builders (tools, data, platforms) relevant to intraday trading.</li>
           </ul>
-
           <h3>What to include</h3>
           <ul class="checklist">
-            <li>Talk topic and 3–5 bullet outline.</li>
+            <li>Talk topic and a 3–5 bullet outline.</li>
             <li>Short bio and links (site, LinkedIn, slides, examples).</li>
             <li>Preferred dates/times and AV needs.</li>
           </ul>
         </div>
-
         <aside class="cta">
           <div class="meta">
             <div><strong>Format:</strong> 30–45 min + Q&amp;A</div>
             <div><strong>Audience:</strong> OSU students, all levels</div>
           </div>
           <p>Help members level up by sharing your experience and mistakes — not just highlights.</p>
-          <a class="btn btn-primary"
-             href="mailto:apply@daytradersosu.com?subject=Guest%20Speaker%20Application&body=Name:%0AEmail:%0AOrganization/Title:%0ATalk%20Topic:%0AOutline:%0ALinks:%0APreferred%20Dates:%0A"
-             >Apply</a>
+          <button class="btn btn-primary" data-open-form="speaker">Apply</button>
         </aside>
       </div>
     </section>
@@ -216,7 +153,6 @@
         <span class="panel-eyebrow">Standards</span>
         <h2 class="panel-title">Board of Traders Application</h2>
       </div>
-
       <div class="panel-body">
         <div class="desc">
           <h3>What you’ll do</h3>
@@ -226,7 +162,6 @@
             <li>Mentor members on risk, sizing, and execution.</li>
             <li>Contribute dashboards, templates, or research.</li>
           </ul>
-
           <h3>What to include</h3>
           <ul class="checklist">
             <li>Experience (years, markets, styles) and risk framework.</li>
@@ -235,20 +170,28 @@
             <li>Weekly availability.</li>
           </ul>
         </div>
-
         <aside class="cta">
           <div class="meta">
             <div><strong>Commitment:</strong> ~3–5 hrs/week</div>
             <div><strong>Focus:</strong> Risk, review, accountability</div>
           </div>
           <p>We’re after thoughtful, process-first traders who enjoy teaching and holding a standard.</p>
-          <a class="btn btn-primary"
-             href="mailto:apply@daytradersosu.com?subject=Board%20of%20Traders%20Application&body=Name:%0AEmail:%0AExperience:%0ARisk%20Framework:%0AStrategies:%0ALinks:%0AAvailability:%0A"
-             >Apply</a>
+          <button class="btn btn-primary" data-open-form="board">Apply</button>
         </aside>
       </div>
     </section>
   </main>
+
+  <!-- Fullscreen Google Form overlay -->
+  <div id="formOverlay" class="form-overlay" role="dialog" aria-modal="true" aria-labelledby="formTitle">
+    <div class="form-sheet">
+      <div class="form-bar">
+        <h3 id="formTitle">Application</h3>
+        <button class="form-close" id="formClose" aria-label="Close form">✕</button>
+      </div>
+      <iframe id="formFrame" class="form-frame" src="" allow="clipboard-write *;"></iframe>
+    </div>
+  </div>
 
   <footer class="site-footer">
     <p>&copy; <span id="year"></span> OSU Day Traders • Student Organization</p>
@@ -256,7 +199,41 @@
 
   <script src="js/main.js"></script>
   <script>
+    // === Replace these with your real Google Form "embed" URLs ===
+    // In Google Forms: Send (paper airplane) → <> Embed → copy the src URL.
+    const FORM_URLS = {
+      treasurer: 'https://docs.google.com/forms/d/e/REPLACE_TREASURER_FORM_ID/viewform?embedded=true',
+      speaker:   'https://docs.google.com/forms/d/e/REPLACE_SPEAKER_FORM_ID/viewform?embedded=true',
+      board:     'https://docs.google.com/forms/d/e/REPLACE_BOARD_FORM_ID/viewform?embedded=true',
+    };
+
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Open overlay with the appropriate Google Form
+    const overlay = document.getElementById('formOverlay');
+    const frame   = document.getElementById('formFrame');
+    const titleEl = document.getElementById('formTitle');
+
+    document.querySelectorAll('[data-open-form]').forEach(btn=>{
+      btn.addEventListener('click', ()=>{
+        const key = btn.getAttribute('data-open-form');
+        const src = FORM_URLS[key];
+        if (!src) { window.open('https://forms.google.com', '_blank'); return; }
+        titleEl.textContent = btn.closest('.app-panel').querySelector('.panel-title').textContent.trim();
+        frame.src = src;
+        overlay.style.display = 'block';
+        document.body.style.overflow = 'hidden';
+      });
+    });
+
+    function closeOverlay(){
+      overlay.style.display = 'none';
+      frame.src = '';
+      document.body.style.overflow = '';
+    }
+    document.getElementById('formClose').addEventListener('click', closeOverlay);
+    overlay.addEventListener('click', (e)=>{ if(e.target === overlay) closeOverlay(); });
+    document.addEventListener('keydown', (e)=>{ if(e.key === 'Escape' && overlay.style.display==='block') closeOverlay(); });
   </script>
 </body>
 </html>
