--- a/about.html
+++ b/about.html
@@ -81,9 +81,9 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png?v=20251013" alt="Treasurer" class="leader-photo" />
+        <img src="assets/images/treasurer.jpg?v=20251013" alt="Treasurer — Anastas Raykov" class="leader-photo" />
         <div class="leader-body">
-          <h3>Treasurer</h3>
+          <h3>Treasurer — Anastas Raykov</h3>
           <p>Manages budgeting, reimbursements, and fundraising.</p>
         </div>
       </div>
