--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
     <!-- Other leaders -->
     <div class="leaders-others">
       <div class="leader card">
-        <img src="assets/images/public-relations.jpg?v=20251013" alt="PR — Jenny Zhu" class="leader-photo" />
+        <img src="assets/images/public-relations.jpg?v=20251013" alt="CD — Jenny Zhu" class="leader-photo" />
         <div class="leader-body">
-          <h3>PR — Jenny Zhu</h3>
-          <p>Manages social media, promotes events, and builds partnerships.</p>
+          <h3>CD — Jenny Zhu</h3>
+          <p>Oversees design of media</p>
         </div>
       </div>
 
@@ -89,18 +89,18 @@
       </div>
 
       <div class="leader card">
-        <img src="assets/images/trading-committee.jpg?v=20251013" alt="Trading Committee Lead — Brian Liao" class="leader-photo" />
+        <img src="assets/images/trading-committee.jpg?v=20251013" alt="PR — Brian Liao" class="leader-photo" />
         <div class="leader-body">
-          <h3>Trading Committee Lead — Brian Liao</h3>
-          <p>Designs workshops and study tracks on risk, journaling, and setups.</p>
+          <h3>PR — Brian Liao</h3>
+          <p>Oversees all Social Media</p>
         </div>
       </div>
 
       <div class="leader card">
-        <img src="assets/images/blank.png?v=20251013" alt="Events Coordinator" class="leader-photo" />
+        <img src="assets/images/blank.png?v=20251013" alt="Trading Commitee Lead - Faraz Ayub" class="leader-photo" />
         <div class="leader-body">
-          <h3>Events Coordinator</h3>
-          <p>Plans speakers, collabs, and challenge weeks.</p>
+          <h3>Trading Commitee Lead - Faraz Ayub</h3>
+          <p>Responsible for teaching trading concepts and strategies.</p>
         </div>
       </div>
 
